Fix div vertical alignment

--- a/client/src/styles.scss
+++ b/client/src/styles.scss
@@ -49,26 +49,20 @@ body {
 @media(min-width: 600px) {
 
   #backgroundDiv {
-    position: fixed;
+//    position: fixed;
     top: $header-height;
     left: 0;
 
     /* Preserve aspet ratio */
     min-width: 100%;
-    min-height: 100% - $header-height - $footer-height;
     background-size: cover;
     background-repeat: no-repeat;
     background-image: url("/assets/login/background.png");
   }
 
   .centered {
-    margin: 0;
-    float: left;
-    width:100%;
-    position:absolute;
-    top: 50%;
-    transform: translateY(-50%) translateX(-50%);
-    left:50%;
+    margin-top: 10%;
+    margin-bottom: 10%;
   }
 }
 @media print {
